# OptixCUDA

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  nimbus_scene.xml
Bindings/: OptixSionnaBinding.cpp  optix_sionna_binding.py  phantom_scene.xml  test_bridge.py  test_sionna.py
Engine/Core/: Context.cpp  Context.h  CudaError.h
Engine/Scene/: GeometryManager.cpp  GeometryManager.h  MeshTypes.h  PointCloudConverter.cpp  PointCloudConverter.h  SceneManager.cpp  SceneManager.h
Engine/Tracer/: ImageMethodKernel.cu  ImageMethodKernel.h  ImageMethodSolver.cpp  ImageMethodSolver.h  RayGenerator.cpp  RayGenerator.h  RayTracer.cpp  RayTracer.h  SbrTypes.h
NimbusCommon/: LaunchParams.h  SBTData.h
Ptx/: device_programs.cu
